--- a/index.htm
+++ b/index.htm
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Coração de Papel.</h1>
 
     </header>
-    <nav class="navv">
+    <nav class="nav">
         <a href="#" class="logo">ola</a>
         <button class="btn"></button>
-        <ul class="list">
+        <ul class="nav-list">
             <li><a href="#">watz</a></li>
             <li><a href="#">insta</a></li>
             <li><a href="#">feice</a></li>
@@ -25,26 +25,23 @@
 
     </nav>
     <main>
-        <div class="lapis">
-            <h2>lapis</h2>
-
-        </div>
-        <div class="caneta"> 
-            <h2>caneta</h2>
-
-        </div>
-        <div class="mochila">
-            <h2>mochila</h2>
-
-        </div>
-        <div class="pochete">
-            <h2>acessorio de pochete</h2>
-
-        </div>
-        <div class="cadernos" >
-            <h2>cadernos.</h2>
-
-        </div>
+        
+            <div class="lapis">
+                <h2>lapis</h2>
+            </div>
+            <div class="caneta">
+                <h2>caneta</h2>
+            </div>
+            <div class="mochila">
+                <h2>mochila</h2>
+            </div>
+            <div class="pochete">
+                <h2>acessorio de pochete</h2>
+            </div>
+            <div class="cadernos" >
+                <h2>cadernos.</h2>
+            </div>
+        
 
     </main>
 
