--- a/index.htm
+++ b/index.htm
@@ -24,21 +24,21 @@
         </ul>
 
     </nav>
-    <main>
+    <main id="conteiner">
         
-            <div class="lapis">
+            <div class="lapis" id="div">
                 <h2>lapis</h2>
             </div>
-            <div class="caneta">
+            <div class="caneta" id="div">
                 <h2>caneta</h2>
             </div>
-            <div class="mochila">
+            <div class="mochila" id="div">
                 <h2>mochila</h2>
             </div>
-            <div class="pochete">
+            <div class="pochete" id="div">
                 <h2>acessorio de pochete</h2>
             </div>
-            <div class="cadernos" >
+            <div class="cadernos" id="div" >
                 <h2>cadernos.</h2>
             </div>
         
