--- a/index.htm
+++ b/index.htm
@@ -24,9 +24,15 @@
 
         </ul>
         
-
     </nav>
+
     <main id="conteiner">
+        <img src="img/logo.jpg" alt="" id="img-main">
+        <h2 id="servico">Serviços</h2>
+        <p>Encadernsção <br>
+        Plastificação <br>
+        Digitalização <br>
+        Xerox</p>
                 
             <div class="lapis" id="div">
                 <h2>lapis</h2>
