--- a/index.htm
+++ b/index.htm
@@ -18,9 +18,9 @@
         <a href="#"></a>
         <button class="btn"></button>
         <ul class="nav-list">
-            <li><a href="#">watz</a></li>
-            <li><a href="#">insta</a></li>
-            <li><a href="#">feice</a></li>
+            <li><a href="#">whatsApp</a></li>
+            <li><a href="#">Instagram</a></li>
+            
 
         </ul>
         
@@ -29,7 +29,7 @@
     <main id="conteiner">
         <img src="img/logo.jpg" alt="" id="img-main">
         <h2 id="servico">Serviços</h2>
-        <p>Encadernsção <br>
+        <p>Encadernação <br>
         Plastificação <br>
         Digitalização <br>
         Xerox</p>
