--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Coração de Papelp.</h1>
+        <h1>Coração de Papelp</h1>
         
 
     </header>
@@ -61,6 +61,17 @@
             
 
     </main>
+    <footer>
+        <section>
+            <h1>coração de papelp.</h1>
+            <p>material escolar e linha de escritório.</p>
+            <h3>horarios</h3>
+            <p>segunda a sexta : 07:40 ao 12:00 e 12:40 as 19:00 <br>
+                sabado das 08:30 ao 12:00
+        </section>
+        </p>
+
+    </footer>
 
     <script src="script.js"></script>
 </body>
