--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/logo2.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
